platform/kubernetes/kopia/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kopia
  namespace: backups
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kopia
  template:
    metadata:
      labels:
        app: kopia
    spec:
      containers:
        - name: kopia
          image: kopia/kopia:20260206.0.181501 # {"$imagepolicy": "flux-system:kopia"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 51515
          command: ["/bin/sh", "/opt/entrypoint/entrypoint.sh"]
          volumeMounts:
            - name: repo
              mountPath: /repo
            - name: config
              mountPath: /root/.config/kopia
              subPath: config
            - name: config
              mountPath: /root/.cache/kopia
              subPath: cache
            - name: entrypoint
              mountPath: /opt/entrypoint
      volumes:
        - name: repo
          persistentVolumeClaim:
            claimName: kopia-repo-pvc
        - name: config
          persistentVolumeClaim:
            claimName: kopia-config-pvc
        - name: entrypoint
          configMap:
            name: kopia-entrypoint
            defaultMode: 0755
