platform/kubernetes/kopia/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopia
  namespace: backups
spec:
  selector:
    app: kopia
  ports:
    - name: http
      port: 80
      targetPort: 51515
  type: ClusterIP
